--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -23,11 +23,11 @@
           </div>
           <div class="pp_container1">
             {% if user.profile_pic is none or user.profile_pic == '' %}
-                <img id="p-pic" src="{{ url_for('static', filename='imgs/profile-pic.webp') }}" alt="default profile pic">
+                <img src="{{ url_for('static', filename='imgs/profile-pic.webp') }}" alt="default profile pic">
             {% else %}
-                <img id="p-pic" src="{{ url_for('static', filename=user.profile_pic) }}" alt="Profile Picture">
+                <img src="{{ url_for('static', filename=user.profile_pic) }}" alt="Profile Picture">
             {% endif %}
-        </div>
+          </div>
         </div> 
       </div>
       
