--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -392,6 +392,15 @@ a[href=emailcode]:hover{
   justify-content: center;
 }
 
+.pp_container1 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  filter: brightness(100%);
+  transition: .5s ease;
+}
+
 .pp_container img {
   width: 100%;
   height: 100%;
@@ -517,10 +526,9 @@ a[href=emailcode]:hover{
   z-index: 2;
 }
 
-
 .artist_pfp{
-  height: 10%;
-  width: 10%;
+  height: 50px;
+  width: 50px;
   margin-bottom: 1%; 
   margin-right: 1%;
 }
