--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,8 +28,8 @@
                     <li><a href="{{ url_for('auth.login') }}">se connecter</a>
                 {% endif %}
             </ul>
-            
-            <div class="pp_container" style="width: 60px; height: 60px; margin-top: 20px;">
+            {%if g.user %}
+            <div class="pp_container1" style="width: 60px; height: 60px; margin-top: 20px;">
                 {%if g.user['profile_pic'] is none%}
                     <a href="{{url_for('user.show_profile')}}">
                         <img class="profile-pic" src="/static/imgs/profile-pic.webp" alt="default profile pic">
@@ -40,6 +40,9 @@
                     </a>
                 {% endif %}
             </div>
+            {%else%}
+            <div style="width: 60px; height: 60px; margin-top: 20px;"></div>
+            {%endif%}
         </nav>
             <hr class="line">
     </header>
