--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -392,7 +392,9 @@ a[href=emailcode]:hover{
   justify-content: center;
 }
 
-.pp_container1 img {
+
+
+.pp_container1 img, a {
   width: 100%;
   height: 100%;
   object-fit: cover;
