--- a/app/templates/artists/people.html
+++ b/app/templates/artists/people.html
@@ -15,11 +15,13 @@
           <div class="column artist-work">
             <div class="row start ">
               <div class="artist_pfp pp_container">
-                {% if user.profile_pic is none or user.profile_pic == '' %}
-                <img src="/static/imgs/profile-pic.webp" alt="default profile pic">
-                {% else %}
-                <img src="{{ url_for('static', filename=user.profile_pic) }}" alt="Profile Picture">
-                {% endif %}
+                <a href="{{ url_for('artists.user_profile', username=user.username) }}">
+                  {% if user.profile_pic is none or user.profile_pic == '' %}
+                  <img src="/static/imgs/profile-pic.webp" alt="default profile pic">
+                  {% else %}
+                  <img src="{{ url_for('static', filename=user.profile_pic) }}" alt="Profile Picture">
+                  {% endif %}
+                </a>
               </div>
               <p style="margin-top: auto;">{{user['username']}}</p>
             </div>
