--- a/app/templates/create/send.html
+++ b/app/templates/create/send.html
@@ -7,7 +7,14 @@ Envoyer l'email
 {% block content %}
 <div class="block" style=" width: 40%;">
     <h5 class="center" style="font-size: 200%; font-weight: 400; padding-left: 10%a;"> Envoyer à :</h5>
-    <input type="email" class="box-black" style="width: 100%;">
+    <input list="users" id="userInput" placeholder="noms d'utilisateurs" class="box-black center" style="width: 100%;">
+    <div>
+        <datalist id="users">
+            {% for user in all_users %}
+                <option value="{{ user.username }}"></option>
+            {% endfor %}
+        </datalist>
+    </div>
     <div class="lineblk" style="margin-left: 20%; margin-right: 20%;"></div>
     <h5 class="center">{{ g.gallery['name'] }}</h5>
     <div class="row">
@@ -29,4 +36,29 @@ Envoyer l'email
         <a href="{{ url_for('create.createproject')}}" style="text-decoration: none;"><h5 class="center" style="opacity: .5;">retour</h5></a>
     </form>
 </div>
+
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    let input = document.getElementById("userInput");
+    let selectedUsers = document.getElementById("selectedUsers");
+    let users = [{% for user in all_users %} "{{ user.username }}", {% endfor %}];
+    input.addEventListener("change", function() {
+        let name = input.value.trim();
+        if (name !== "" && users.includes(name)) { 
+            addUser(name);
+        }
+        input.value = ""; // Clear input after selection
+    });
+
+    function addUser(name) {
+        if ([...selectedUsers.children].some(box => box.textContent === name)) return;
+
+        let box = document.createElement("div");
+        box.className = "user-box";
+        box.textContent = name;
+        box.onclick = function() { this.remove(); };
+        selectedUsers.appendChild(box);
+    }
+});
+</script>
 {% endblock %}
