--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -6,9 +6,9 @@
 
 {% block content %}
     <div class="content-margin">
-        <div>
+        <div class="row">
             <form method="post" enctype="multipart/form-data">
-                </div class="column">
+                <div class="column">
                     <h2>
                         Changer mon profil  
                     </h2>
@@ -73,7 +73,10 @@
                         
                     </div>
                 </div> 
+
             </form>
+            <div>
+            </div>
         </div>
     </div>
 
