--- a/app/templates/artists/user_profile.html
+++ b/app/templates/artists/user_profile.html
@@ -1,60 +1,77 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Profil de : 
+  Profil
 {% endblock %}
 
 {% block content %}
-  <div class="content-profile">
-    <div>
-      <ul>
-        <div class="content-profile-title">
-          <div>
-            <h2>Mon profil</h2>
-            
-          </div>
-          <div class="user-info">
-            <div class="column end">
-              <h3 class="end">
-                <span>{{ g.user['username'] }}</span>
-              </h3>
-              <ul>
-                <a>changer mon profil</a>
-              </ul>
-            </div>
-            {%if g.user['profile_pic'] is none%}
-              <img class="profile-pic" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-            {% else %}
-              <span>{{g.user['profile_pic']}}</span>
-            {% endif %}
-          </div> 
+  <div>
+    <ul>
+      <div class="content-profile-title">
+        <div>
+          <h2>Mon profil</h2>
+          
         </div>
-        
-        <div class="profile_proj">
-          <div class="column">
-            <h3>
-              <p class="wide">Petite phrase qui vous décrit.</p>
-              <p>Les projets</p>
+        <div class="user-info">
+          <div class="column end">
+            <h3 class="end">
+              <span>{{ user['username'] }}</span>
             </h3>
+          </div>
+          <div class="pp_container1">
+            {% if user.profile_pic is none or user.profile_pic == '' %}
+                <img src="{{ url_for('static', filename='imgs/profile-pic.webp') }}" alt="default profile pic">
+            {% else %}
+                <img src="{{ url_for('static', filename=user.profile_pic) }}" alt="Profile Picture">
+            {% endif %}
+          </div>
+        </div> 
+      </div>
+      
+      <div class="profile_proj">
+        <div class="column">
+          <h3>
+            {%if user['mini_desc'] | trim == '' or user['mini_desc'] is none %}
+            <p class="wide" >Petite phrase qui vous décrit.</p>
+            {%else%}
+            <p class="wide" >{{user['mini_desc']}}</p>
+            {%endif%}
+            <p>Les projets</p>
+          </h3>
+          <div style="margin-left: auto; margin-right: auto;">
             <div class="between">
               adwad
               <p>dawdad</p>
             </div>
-            <img src="/static/imgs/ex.jpg" alt="exemple">
+            <img  src="/static/imgs/ex.jpg" alt="exemple">
             date du projet
           </div>
-
-          <div id="shape1">
-            <h4>
-              <span>{{g.user['name']}} {{g.user['last_name']}}</span>
-              <p>awofa</p>
-              <p>fhafoi</p>
-            </h4> 
-          </div>
-
         </div>
-      </ul>
-    </div>
 
-  </div>  
+        <div id="shape1" style="padding: 20px;">
+          <h5>
+            <div style="line-height: 50px;">
+              <span>{{user['name']}} {{user['last_name']}}</span>
+              <p>{{user['email']}}</p>
+            </div>
+            <p>
+              Style d'art préféré : 
+              {%if user['fav_style'] | trim == '' or user['fav_style'] is none %}
+              Aucun style spécifié...
+              {%else%}
+              {{user['fav_style']}}
+              {%endif%}
+            </p>
+            <div class="lineblk"></div>
+            {%if user['desc'] | trim == '' or user['desc'] is none %}
+            <p>Aucune description...</p>
+            {%else%}
+            <span>{{user['desc']}}</span>
+            {%endif%}
+          </h5> 
+        </div>
+
+      </div>
+    </ul>
+  </div>
 {% endblock %}
