--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -17,7 +17,7 @@
       </div>
     {% endif %}
   </div>
-  <div class="center">
+  <div class="center" style="width: 200px; justify-content: center; margin: auto;">
     {% if g.user is none %}
     <a href="{{ url_for('auth.login') }}">
       <input type="button" value="Créer un projet" class="create-button">
