résolution de quelques problèmes dans la création d'une gallerie

--- a/app/templates/create/createproject.html
+++ b/app/templates/create/createproject.html
@@ -31,8 +31,7 @@
         <input type="date" name="deadline" id="deadline" class="box-black" required>
         <div class="lineblk"></div>
         <h5>Format :</h5>
-
-        <select id="aspectRatio">
+        <select id="aspectRatio" name="format" required>
           <option value="" disabled selected>Libre, 1:1, 2:3, ...</option>
           <option value="libre">libre</option>
           <option value="1:1">1:1</option>
@@ -40,7 +39,8 @@
           <option value="3:4">3:4</option>
           <option value="4:5">4:5</option>
           <option value="9:16">9:16</option>
-        </select>    
+        </select>
+
 
 <div id="dynamicContent"></div>
 
