--- a/app/templates/create/send.html
+++ b/app/templates/create/send.html
@@ -47,7 +47,7 @@ document.addEventListener("DOMContentLoaded", function() {
         if (name !== "" && users.includes(name)) { 
             addUser(name);
         }
-        input.value = ""; // Clear input after selection
+        input.value = "";
     });
 
     function addUser(name) {
