--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -17,7 +17,7 @@
                             <input type="file" id="profile_pic" name="profile_pic" accept="image/*" style="display: none;">
                             <label for="profile_pic">
                                 <div class="pp_container">
-                                    {% if user.profile_pic is none or user.profile_pic == '' %}
+                                    {% if user.profile_pic is none%}
                                         <img id="p-pic" src="{{ url_for('static', filename='imgs/profile-pic.webp') }}" alt="default profile pic">
                                     {% else %}
                                         <img id="p-pic" src="{{ url_for('static', filename=user.profile_pic) }}" alt="Profile Picture">
